--- a/.harness/FIS1.yaml
+++ b/.harness/FIS1.yaml
@@ -51,3 +51,29 @@ pipeline:
                 - AllErrors
               action:
                 type: StageRollback
+    - stage:
+        name: Conditional
+        identifier: Conditional
+        description: ""
+        type: Custom
+        spec:
+          execution:
+            steps:
+              - step:
+                  type: ShellScript
+                  name: ShellScript_1
+                  identifier: ShellScript_1
+                  spec:
+                    shell: Bash
+                    onDelegate: true
+                    source:
+                      type: Inline
+                      spec:
+                        script: |-
+                          if if [ $? -ne 0 ]; then
+                              <ran if unsuccessful>
+                          fi
+                    environmentVariables: []
+                    outputVariables: []
+                  timeout: 10m
+        tags: {}
