--- a/.harness/FIS1.yaml
+++ b/.harness/FIS1.yaml
@@ -77,3 +77,5 @@ pipeline:
                     outputVariables: []
                   timeout: 10m
         tags: {}
+        when:
+          pipelineStatus: Success
