--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -5,7 +5,8 @@
 replicaCount: 3
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
+  repository: nagarjunacse02/gogs-operator
+  #repository: gcr.io/heptio-images/ks-guestbook-demo
   tag: 0.1
   pullPolicy: IfNotPresent
 
