--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -14,8 +14,8 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: docker/labs-k8s-toolkit-extension:0.0.46
-      #- image: gcr.io/heptio-images/ks-guestbook-demo:0.1
+      #- image: docker/labs-k8s-toolkit-extension:0.0.46
+      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
         name: guestbook-ui
         ports:
         - containerPort: 80
